Taste Algorithm improved, Scrobble and ScrobbledLb